# libWindowBar

./: README.md
libWindowBar/: CMakeLists.txt  windowbar.cpp  windowbar.h  windowbar_p.h
libWindowBar/resource/: resource.qrc
libWindowBar/resource/style/: dark-style.qss  light-style.qss
